--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:locale" content="en_GB">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:url" content="https://savedbykadena.netlify.app">
+  <meta property="og:url" content="https://savedby.kadena.network">
 
   <link rel="icon" href="favicon.ico">
   <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
