--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
       goodCount++;
     }
     var good = document.getElementById('goodCount')
-    good.appendChild(document.createTextNode(goodCount);
+    good.appendChild(document.createTextNode(goodCount));
     var total = document.getElementById('totalCount')
-    total.appendChild(document.createTextNode(data.length);
+    total.appendChild(document.createTextNode(data.length));
 
     var table = document.getElementById('projectTable')
 
