--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <th class="columnheader">Amount Lost</th>
       <th class="columnheader">
         <div class="remedy">
-          Remedy (click for more info)
+          Remedy (hover for more info)
         </div>
       </th>
     </tr>
