Add link to GitHub, fix link underlines

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <div>Kadena Discord</div>
         <img src="img/discord_icon.svg" alt=""></img>
       </a>
+      <a class="headlinkSite" href="https://github.com/kadena-community/saved-by-kadena">
+        <div>Contribute to this site</div>
+        <img src="img/github_icon.svg" alt=""></img>
+      </a>
     </span>
   </nav>
 
