--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <!-- <link rel="manifest" href="/my.webmanifest"> -->
   <meta name="theme-color" content="#000">
 
-  <script src="jquery.min.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
