--- a/index.html
+++ b/index.html
@@ -124,24 +124,17 @@
     </tbody>
   </table>
 
-  <section class="legend">
-    <h4>Confidence Legend</h4>
-    <table class="legend-table">
-      <tr>
-        <td class="termcol"><span class="definite legend-item">Definite</span></td>
-        <td>Green represents a remedy that definitely would have prevented the
-        hack with no special thought or actions required by the
-        developer.</td>
-      </tr>
+  <h4 class="legendHeadline">Confidence Legend</h4>
+  <div class="tagExplainerHolder">
+    <span class="tagExplainer definite">Definite</span>
+    <span class="darkText">Green represents a remedy that definitely would have prevented the hack with no special
+      thought or actions required by the developer.</span>
 
-      <tr>
-      <td class="termcol"><span class="probable legend-item">Probable</span></td>
-      <td>Yellow represents a remedy that would have very likely prevented the
+    <span class="tagExplainer probable">Probable</span>
+    <span class="darkText">Yellow represents a remedy that would have very likely prevented the
       hack, but does require the use of good coding practices by the
-      developer.</td>
-      </tr>
-    </table>
-  </section>
+      developer..</span>
+  </div>
 
   <footer>
       <div class="alignText">
