changed banner image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Build safe and scalable dapps with Pact">
   <meta property="og:title" content="savedbyKadena">
   <meta property="og:description" content="Build safe and scalable dapps on Kadena with Pact">
-  <meta property="og:image" content="https://i.imgur.com/udzRFhH.png">
+  <meta property="og:image" content="https://i.imgur.com/wgyEnxD.jpg">
   <meta property="og:locale" content="en_GB">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
